frame/support/test/tests/construct_runtime_ui/invalid_token_after_name.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub struct Runtime
	{
		system ?
	}
}

fn main() {}
